# SHINCHON

./: .gitignore  README.md
Software/Diffusion/: diffusion.C  heavy_quark_pt.root
Software/IPGlasma-Macos/: file.lst  outfile.root
Software/IPGlasma-Ubuntu/: input  outfile.root
Software/MCGlauber/: CalOverlap.C  MCGlauber-PbPb-5.02TeV-b0-2fm.root  Run_glauber.C  runglauber_v3.2.C
Software/MUSIC-Macos/: README.md  mpihydro  music_input_mode_1
Software/MUSIC-Ubuntu/: CMakeLists.txt  GNUmakefile  log  mpihydro  music_input_mode_1  music_input_mode_13  music_input_mode_2  todo
Software/MUSIC-Ubuntu/doxygen/: configure
Software/MUSIC-Ubuntu/examples_inputs/2D/: music_input_mode_2
Software/MUSIC-Ubuntu/examples_inputs/3D/: music_input_mode_2  music_input_mode_3  music_input_mode_4
Software/MUSIC-Ubuntu/input/: Hist2Txt.C
Software/MUSIC-Ubuntu/src/: CMakeLists.txt  data.h  dissipative.cpp  dissipative.h  eos.cpp  eos.h  fluidCell.h  freeze.cpp  glauber.cpp  grid.cpp  grid.h  grid_info.cpp  grid_info.h  init.cpp  init.h  int.cpp  makefile_guillimin  minmod.cpp  music.cpp  read_in_parameters.cpp  reconst.cpp
Software/MUSIC-Ubuntu/tests/Gubser_flow/: music_input_Gubser_ideal
Software/MUSIC-Ubuntu/tests/test_Glauber/: music_input_mode_2  music_input_mode_4
Software/MUSIC-Ubuntu/utilities/: CSplottools.py  generate_music_inputfile.py  music_input_13  music_input_14  music_input_2  music_input_3  music_input_4  music_parameters_dict.py
Software/Others/: submit.pl
Software/SONIC-KIAF/: create_dir.sh
Software/SONIC-KIAF/b3d/madai_repo/rhic/anal/: CMakeLists.txt  analyze-config.cmake.in  makefile  makefile~
Software/SONIC-KIAF/b3d/madai_repo/rhic/anal/anal.xcworkspace/: contents.xcworkspacedata
Software/SONIC-KIAF/b3d/madai_repo/rhic/anal/anal.xcworkspace/xcuserdata/scottepratt.xcuserdatad/: UserInterfaceState.xcuserstate
Software/SONIC-KIAF/b3d/madai_repo/rhic/anal/src/: ._consolidate.cc  anal_PHENIXspectra.cc  anal_balance.cc  anal_gamma.cc  anal_hbt.cc  anal_qn.cc  analyze.cc  consolidate.cc  distill.cc
Software/SONIC-Macos/: copy_sonic.sh  deploy_sonic.sh  multi_run.sh  readme
Software/SONIC-Ubuntu/: copy_sonic.sh  link_folders.sh  single_run.sh
Software/SONIC-Ubuntu/b3d/madai_repo/rhic/anal/src/: CMakeLists.txt  anal_3dspectra.cc  anal_hbt_orig.cc  anal_v2.cc  oldoldanalyze.cc
Software/Trento/: README
Upsilon/: CalcCent.C  CalcRaaV0.C  CalcRaaV1.C  CalcRaaV2.C  CalcRaaV3.C  CalcRaaV6.C  CalcRaaV7.C  CalcRaaV8.C  Style.h  outfile_Centrality_pPb_pO_OO_8TeV.root
Upsilon/EPAna_jaebeom/: SHINCHONLegend.C  SHINCHONLegend.h  SHINCHONLegend_raaCent.C  SHINCHONLegend_raaCent.h  Style_jaebeom.h  Style_jaebeom_woFrameLegend.h  TreeSetting.h  doFitPhiAng.C  doFitV2.C  drawBasicPlots.C  makePlots.C  makePlots.h  makeUpsTree.C
Upsilon/feeddown_correction/: FDCOR_out.root  FDCOR_out_v3.root  Feeddonw_Correction_AuAu.C  Feeddonw_Correction_v1.C  (+2 more)
(+378 files in other folders)
